Menubar icons updated

--- a/POIProxy/Views/Index.cshtml
+++ b/POIProxy/Views/Index.cshtml
@@ -139,9 +139,9 @@
 <script type = "text/jscript">
     function initMenuBar() {
         $("#DrawingItem > img").attr("src", "@(Model.ImageUrl)pencil.png");
-        $("#ColorItem > img").attr("src", "@(Model.ImageUrl)graph_bar.png");
+        $("#ColorItem > img").attr("src", "@(Model.ImageUrl)laser_icon.jpg");
         $("#CommentItem > img").attr("src", "@(Model.ImageUrl)speech_bubble.png");
-        $("#ControlItem > img").attr("src", "@(Model.ImageUrl)Control_icon.png");
+        $("#ControlItem > img").attr("src", "@(Model.ImageUrl)mail.png");
 
         $("#DrawingItem > img").click(function(){
             showWhiteboard();
