--- a/POIProxy/Views/Layout.htm
+++ b/POIProxy/Views/Layout.htm
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
     <head>
-        <title></title>
+        <title>POI Interactive Presentation Board</title>
         <meta name="apple-mobile-web-app-capable" content="yes">
     </head>
     <body>
