Local support for pointer mode

--- a/POIProxy/CSS/poi.css
+++ b/POIProxy/CSS/poi.css
@@ -134,7 +134,7 @@ textarea {
     left: 0%;
 }
     
-#ColorItem
+#PointerItem
 {
     left: 25%;
 }
@@ -144,7 +144,7 @@ textarea {
     left: 50%;
 }
     
-#ControlItem
+#MailItem
 {
     left: 75%;
 }
