--- a/POIProxy/Views/Layout.htm
+++ b/POIProxy/Views/Layout.htm
@@ -11,9 +11,9 @@
             
             <div id = "MenuBar" >
                 <div id = "DrawingItem"><img /></div>
-                <div id = "ColorItem"><img /></div>
+                <div id = "PointerItem"><img /></div>
                 <div id = "CommentItem"><img /></div>
-                <div id = "ControlItem"><img /></div>
+                <div id = "MailItem"><img /></div>
             </div>
 
             <div id = "PresBoardSideBarSlideRegion">
