--- a/POIProxy/Views/Index.cshtml
+++ b/POIProxy/Views/Index.cshtml
@@ -11,6 +11,7 @@
 <script src = "@(Model.SignalrUrl)hubs" type="text/javascript"></script>
 <script src = "@(Model.ScriptUrl)jquery-ui-1.8.22.custom.min.js" type="text/javascript"></script>
 <script src = "@(Model.ScriptUrl)jquery.corner.js" type="text/javascript"></script>
+<script src = "@(Model.ScriptUrl)jquery.ui.touch-punch.min.js" type="text/javascript"></script>
 
 
 <!--Initialization routines-->
@@ -136,13 +137,18 @@
 
     function initMenuBar() {
         $("#DrawingItem > img").attr("src", "@(Model.ImageUrl)pencil.png");
-        $("#ColorItem > img").attr("src", "@(Model.ImageUrl)laser_icon.jpg");
+        $("#PointerItem > img").attr("src", "@(Model.ImageUrl)laser_icon.jpg");
         $("#CommentItem > img").attr("src", "@(Model.ImageUrl)speech_bubble.png");
-        $("#ControlItem > img").attr("src", "@(Model.ImageUrl)mail.png");
+        $("#MailItem > img").attr("src", "@(Model.ImageUrl)mail.png");
 
         $("#DrawingItem > img").click(function(){
             showWhiteboard();
             tool.switchToDrawingMode();
+        });
+
+         $("#PointerItem > img").click(function(){
+            showWhiteboard();
+            tool.switchToPointerMode();
         });
 
         $("#CommentItem > img").click(function(){
@@ -150,7 +156,7 @@
             tool.switchToTextMode();
         });
 
-        $("#ControlItem > img").click(function(){
+        $("#MailItem > img").click(function(){
             //Save the current drawing
             tool.saveComment();
         });
@@ -305,16 +311,6 @@
         ptrController.ProcessMsg(msgString);
     }
 
-    function updateLaserPointerPosition(point) {
-        var x = 100 * point.X / $("#canvasStack").width();
-        var y = 100 * point.Y / $("#canvasStack").height();
-
-        $("#laserPointer").css({
-            left: parseInt(x) + "%",
-            top: parseInt(y) + "%"
-        });
-    }
-
 </script>
 
 <!--Comment tools-->
@@ -369,6 +365,16 @@
             this.touchstart = dummyHandler;
             this.touchmove = dummyHandler;
             this.touchend = createTextbox;
+        }
+
+        this.switchToPointerMode = function () {
+            this.mousedown = startPointer;
+            this.mousemove = movePointer;
+            this.mouseup = endPointer;
+
+            this.touchstart = startPointer;
+            this.touchmove = movePointer;
+            this.touchend = endPointer;
         }
 
         this.switchToIdleMode = function () {
@@ -445,33 +451,12 @@
 
         function loadComment(comment) {
 
-            if (isPointerMode) {
-                if (comment.NumBeizerPath == 1) {
-                    updatePointer(comment.Paths[0]);
-                }
-                else {
-                    //Print out error
-                    console.log("Not valid pointer message: num path");
-                }
-            }
-            else for (var i = 0; i < comment.NumBeizerPath; i++) {
+            for (var i = 0; i < comment.NumBeizerPath; i++) {
                 updateDrawing(comment.Paths[i]);
             }
 
             for (var i = 0; i < comment.NumText; i++) {
                 updateTextbox(comment.Texts[i]);
-            }
-        }
-
-        function updatePointer(path) {
-            if (path.Mode == 0) {
-                //Realtime mode, extract the position from the path
-                var x = path.Points[0].X;
-                var y = path.Points[0].Y;
-            }
-            else {
-                //Print out error
-                console.log("Not valid pointer message: mode");
             }
         }
 
@@ -557,6 +542,12 @@
             tool.started = true;
         };
 
+        function startPointer(ev) {
+            movePointer(ev);
+            $("#whiteBoard").css("cursor", "none");
+            ptrController.ShowPointer();
+        }
+
         // This function is called every time you move the mouse. Obviously, it only 
         // draws if the tool.started state is set to true (when you are holding down 
         // the mouse button).
@@ -570,6 +561,13 @@
                 curve.render();
             }
         };
+
+        function movePointer(ev) {
+            ptrController.UpdateLocation({
+                "X": ev._x / $("#canvasStack").width(),
+                "Y": ev._y / $("#canvasStack").height()
+            });
+        }
 
         // This is called when you release the mouse button.
         function mouseendDrawing(ev) {
@@ -585,6 +583,11 @@
                 tool.started = false;
             }
         };
+
+        function endPointer(ev) {
+            $("#whiteBoard").css("cursor", "auto");
+            ptrController.HidePointer();
+        }
 
         function dummyHandler(ev) {
             //Do nothing
@@ -668,6 +671,7 @@
         this.ProcessMsg = ProcessMsg;
         this.ShowPointer = showPointer;
         this.HidePointer = hidePointer;
+        this.UpdateLocation = updateLocation;
 
         function showPointer() {
             $("#laserPointer").show();
@@ -680,12 +684,15 @@
 
         function eventExecution(ptrEvent) {
             var msg = ptrEvent;
-            
+
             //Update pointer position
+            /*
             $("#laserPointer").css({
                 left: parseInt(100 * msg.X) + "%",
                 top: parseInt(100 * msg.Y) + "%"
-            });
+            });*/
+
+            updateLocation(msg);
 
             switch (msg.Type) {
                 case 0: //Start
@@ -700,6 +707,13 @@
                     hidePointer();
                     break;
             }
+        }
+
+        function updateLocation(point) {
+            $("#laserPointer").css({
+                left: parseInt(100 * point.X) + "%",
+                top: parseInt(100 * point.Y) + "%"
+            });
         }
 
 
@@ -1060,10 +1074,6 @@
         //Function definitions
         function addPointToCurve(point) {
 
-                      
-            //For testing purpose only
-            updateLaserPointerPosition(point);
-
             var newSegment;
 
             if (numPoints < 1) {
@@ -1204,7 +1214,6 @@
     // The laser pointer controller
     var ptrController = new LaserPointerController();
     
-    
     //For slider region control
     var isStart = false;
     var startValue;
@@ -1214,8 +1223,5 @@
     var curSlideIndex = 0;
     var preloadSlideIndex = 0;
     var mainSlideViewIndex = 2;
-
-    //For switching between drawing and pointer mode
-    var isPointerMode = false;
 
 </script>
