--- a/POIProxy/Views/Index.cshtml
+++ b/POIProxy/Views/Index.cshtml
@@ -140,6 +140,7 @@
         $("#PointerItem > img").attr("src", "@(Model.ImageUrl)laser_icon.jpg");
         $("#CommentItem > img").attr("src", "@(Model.ImageUrl)speech_bubble.png");
         $("#MailItem > img").attr("src", "@(Model.ImageUrl)mail.png");
+        $("#Logo > img").attr("src", "@(Model.ImageUrl)logo.png");
 
         $("#DrawingItem > img").click(function(){
             showWhiteboard();
