--- a/POIProxy/Views/Layout.htm
+++ b/POIProxy/Views/Layout.htm
@@ -8,7 +8,8 @@
         
         @RenderBody()
         <div id = "PresBoard" align="center">
-            
+            <div id = "Logo"><img /></div>
+
             <div id = "MenuBar" >
                 <div id = "DrawingItem"><img /></div>
                 <div id = "PointerItem"><img /></div>
