Cursor type change for icons

--- a/POIProxy/Views/Index.cshtml
+++ b/POIProxy/Views/Index.cshtml
@@ -162,6 +162,12 @@
             tool.saveComment();
             alert("Comment has been sent!");
         });
+
+        $("#Logo").css("cursor", "hand");
+
+        $("#Logo > img").click(function(){
+            window.location.href = "http://www.pipeofinsight.com";
+        });
     }
 
 </script>
